# codonyat

./: .gitignore  Dockerfile  LICENSE  README.md  main.nf  nextflow.config  nextflow_schema.json  nf-test.config  pyproject.toml
.github/workflows/: nextflow-docker.yml  publish-dockerhub.yml  publish-pypi.yml  python-tests.yml
aa_caller/: __init__.py  app.py  cli.py  constants.py  container.py  genetic_code.py  models.py  reference.py  runner.py  sam.py  validators.py
aa_caller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
conf/: base.config  test.config
data/: HXB2R.fasta  amplicons.tsv  samplesheet.csv  test_result_1.csv  test_result_1.fas
docs/: index.html
modules/local/: bowtie2.nf  codonyat.nf  dedup.nf  fastp.nf  fastqc.nf  multiqc.nf  samtools.nf
tests/: conftest.py  main.nf.test  main.nf.test.snap  test_app.py  test_integration.py
