[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codonyat"
version = "1.0.1"
description = "codon-yat — A codon-aware (Yet Another) amino acid variant typer from SAM alignments of viral NGS data."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Marc Noguera Julian", email = "info@treetopunder.com"}]
dependencies = [
    "biopython>=1.79",
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["aa_caller*"]

[project.urls]
"Source" = "https://github.com/mnoguera/codonyat"

[project.scripts]
codonyat = "aa_caller.cli:main"
codonyat-runner = "aa_caller.runner:runner_cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "twine",
]
